--- a/Tipos de array/Tipos de array.csproj
+++ b/Tipos de array/Tipos de array.csproj
@@ -1,17 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>Tipos_de_array</RootNamespace>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <Content Remove="appsettings.Development.json" />
-      <Content Remove="appsettings.json" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Compile Remove="Startup.cs" />
-    </ItemGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Tipos_de_Array</RootNamespace>
+  </PropertyGroup>
 
 </Project>
